--- a/pagina/estilos/styles.css
+++ b/pagina/estilos/styles.css
@@ -1,166 +1,165 @@
+/* Nuevos estilos 2024 */
+body {
+  font-family: "Poppins", sans-serif;
+}
 
 header {
-    background-color: #F0C020;
-    color: #fff;
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: #f0c020;
+  color: #fff;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* Estilos del logo */
 .logo {
-    width: 100px; /* Tamaño del logo */
-    height: auto; /* Para mantener la proporción */
+  width: 100px; /* Tamaño del logo */
+  height: auto; /* Para mantener la proporción */
 }
 
 /* Estilos de la barra de navegación */
 nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 nav ul li {
-    display: inline;
-    margin-right: 20px;
+  display: inline;
+  margin-right: 20px;
 }
 
 nav ul li a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 .container {
-    width: 50%;
-    margin: 50px auto;
+  width: 50%;
+  margin: 50px auto;
 }
 
 form {
-    border: 1px solid #ccc;
-    padding: 20px;
+  border: 1px solid #ccc;
+  padding: 20px;
 }
 
 .form-group {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 label {
-    display: block;
-    margin-bottom: 5px;
+  display: block;
+  margin-bottom: 5px;
 }
 
 input[type="text"],
 input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 button {
-    padding: 10px 20px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 button:hover {
-    background-color: #555;
+  background-color: #555;
 }
 
 /*Productos*/
 
 .productos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .producto {
-    width: 300px;
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    text-align: center;
+  width: 300px;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  text-align: center;
 }
 
 .producto img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .producto h3 {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .producto p {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .producto button {
-    margin-top: 10px;
-    padding: 8px 16px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  margin-top: 10px;
+  padding: 8px 16px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .producto button:hover {
-    background-color: #555;
+  background-color: #555;
 }
-
 
 /* pie de página */
 
 footer {
-    background-color: #F0C020;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
+  background-color: #f0c020;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
 }
 
 .redes-sociales {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .social-icon {
-    display: inline-block;
-    margin: 0 10px;
-    font-size: 24px;
-    color: #fff;
-    text-decoration: none;
+  display: inline-block;
+  margin: 0 10px;
+  font-size: 24px;
+  color: #fff;
+  text-decoration: none;
 }
 
 .social-icon:hover {
-    color: #bbb;
+  color: #bbb;
 }
-
 
 /*Parrafo de inicio*/
 
 .seccion {
-    width: 80%;
-    margin: 0 auto;
-    padding: 30px;
-    background-color: #f0f0f0;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 80%;
+  margin: 0 auto;
+  padding: 30px;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.seccion h1{
+.seccion h1 {
   text-justify: center;
 }
 
 .seccion p {
-    font-size: 24px;
-    line-height: 1.6;
-    color: #333;
- }
-
-
-
+  font-size: 24px;
+  line-height: 1.6;
+  color: #333;
+}
