--- a/pagina/estilos/styles.css
+++ b/pagina/estilos/styles.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Poppins";
+  src: url("fonts/Poppins-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* Nuevos estilos 2024 */
 body {
   font-family: "Poppins", sans-serif;
